external-crates/move/crates/move-compiler/tests/move_check/expansion/use_nested_self_duplicate.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/use_nested_self_duplicate.move:9:17
  │
8 │     use 0x2::X;
  │              - Alias previously defined here
9 │     use 0x2::X::Self;
  │                 ^^^^ Duplicate module alias 'X'. Module aliases must be unique within a given namespace
